using virtual threads instead of platform threads