@@ -221,31 +221,28 @@ public class ams extends Agent /*implements AgentManager.Listener*/ {
 		//#J2ME_EXCLUDE_BEGIN
 		// Register a suitable Shutdown Hook to shutdown the whole platform in case 
 		// the Main Container JVM unexpectedly exits
-		Thread t = new Thread() {
-			public void run() {
-				logger.log(Logger.FINE, ">>>>>>>>> Shutdown Hook activated. AMS state = "+ams.this.getState());
-				// Mutual exclusion with normal shutdown
-				synchronized(ams.this) {
-					if (shuttingDown || ams.this.getState() == Agent.AP_DELETED) {
-						return;
-					}
-					
-					notifyShutdownPlatformRequested();
-					
-					shuttingDown = true;
+		Thread t = Thread.ofVirtual().name("Platform-shutdown").unstarted(() -> {
+			logger.log(Logger.FINE, ">>>>>>>>> Shutdown Hook activated. AMS state = "+ams.this.getState());
+			// Mutual exclusion with normal shutdown
+			synchronized(ams.this) {
+				if (shuttingDown || ams.this.getState() == Agent.AP_DELETED) {
+					return;
 				}
-				
-				try {
-					logger.log(Logger.WARNING, ">>>>>>>>> Main Container JVM is terminating. Activate platform shutdown");
-					myPlatform.shutdownPlatform(null, null);
-					logger.log(Logger.WARNING, ">>>>>>>>> Platform shutdown completed");
-				} catch (Exception e) {
-					logger.log(Logger.SEVERE, ">>>>>>>>> Platform shutdown error", e);
-					shuttingDown = false;
-				}
+
+				notifyShutdownPlatformRequested();
+
+				shuttingDown = true;
 			}
-		};
-		t.setName("Platform-shutdown");
+
+			try {
+				logger.log(Logger.WARNING, ">>>>>>>>> Main Container JVM is terminating. Activate platform shutdown");
+				myPlatform.shutdownPlatform(null, null);
+				logger.log(Logger.WARNING, ">>>>>>>>> Platform shutdown completed");
+			} catch (Exception e) {
+				logger.log(Logger.SEVERE, ">>>>>>>>> Platform shutdown error", e);
+				shuttingDown = false;
+			}
+		});
 		java.lang.Runtime.getRuntime().addShutdownHook(t);
 		//#J2ME_EXCLUDE_END
 	}
@@ -281,31 +278,28 @@ public class ams extends Agent /*implements AgentManager.Listener*/ {
 		final Credentials initialCredentials = ca.getInitialCredentials();
 
 		// Do the job in a separated thread to avoid deadlock
-		Thread auxThread = new Thread() {
-			public void run() {
-				try {
-					myPlatform.create(agentName, className, args, container, owner, initialCredentials, requesterPrincipal, requesterCredentials);
-				} catch (UnreachableException ue) {
-					// Send failure notification to the requester if any. Note that UnreachableException also wraps IMTPException that is not necessarily related to a real un-reachability problem
-					sendFailureNotification(ca, agentID, new InternalError(ue.getMessage()));
-				} catch (JADESecurityException ae) {
-					if (logger.isLoggable(Logger.SEVERE))
-						logger.log(Logger.SEVERE, "Agent " + requester.getName() + " does not have permission to perform action Create-agent: " + ae);
-					// Send failure notification to the requester if any
-					sendFailureNotification(ca, agentID, new Unauthorised());
-				} catch (NotFoundException nfe) {
-					// Send failure notification to the requester if any
-					sendFailureNotification(ca, agentID, new InternalError("Destination container not found. " + nfe.getMessage()));
-				} catch (NameClashException nce) {
-					// Send failure notification to the requester if any
-					sendFailureNotification(ca, agentID, new AlreadyRegistered());
-				} catch (Throwable t) {
-					// Send failure notification to the requester if any
-					sendFailureNotification(ca, agentID, new InternalError(t.getMessage()));
-				}
+		Thread.ofVirtual().start(() -> {
+			try {
+				myPlatform.create(agentName, className, args, container, owner, initialCredentials, requesterPrincipal, requesterCredentials);
+			} catch (UnreachableException ue) {
+				// Send failure notification to the requester if any. Note that UnreachableException also wraps IMTPException that is not necessarily related to a real un-reachability problem
+				sendFailureNotification(ca, agentID, new InternalError(ue.getMessage()));
+			} catch (JADESecurityException ae) {
+				if (logger.isLoggable(Logger.SEVERE))
+					logger.log(Logger.SEVERE, "Agent " + requester.getName() + " does not have permission to perform action Create-agent: " + ae);
+				// Send failure notification to the requester if any
+				sendFailureNotification(ca, agentID, new Unauthorised());
+			} catch (NotFoundException nfe) {
+				// Send failure notification to the requester if any
+				sendFailureNotification(ca, agentID, new InternalError("Destination container not found. " + nfe.getMessage()));
+			} catch (NameClashException nce) {
+				// Send failure notification to the requester if any
+				sendFailureNotification(ca, agentID, new AlreadyRegistered());
+			} catch (Throwable t) {
+				// Send failure notification to the requester if any
+				sendFailureNotification(ca, agentID, new InternalError(t.getMessage()));
 			}
-		};
-		auxThread.start();
+		});
 	}
 
 	// KILL AGENT
@@ -398,28 +392,24 @@ public class ams extends Agent /*implements AgentManager.Listener*/ {
 			e.printStackTrace();
 		}
 
-		Thread auxThread = new Thread() {
-			public void run() {
-				try {
-					myPlatform.killContainer(cid, requesterPrincipal, requesterCredentials);
-				} catch (JADESecurityException ae) {
-					logger.log(Logger.SEVERE, "Agent " + requester.getName() + " does not have permission to perform action Kill-container: " + ae);
-					// Send failure notification to the requester if any
-					sendFailureNotification(kc, cid, new Unauthorised());
-				} catch (NotFoundException nfe) {
-					// Send failure notification to the requester if any
-					sendFailureNotification(kc, cid, new InternalError("Container not found. " + nfe.getMessage()));
-				} catch (UnreachableException ue) {
-					// Send failure notification to the requester if any
-					sendFailureNotification(kc, cid, new InternalError("Container unreachable. " + ue.getMessage()));
-				} catch (Throwable t) {
-					// Send failure notification to the requester if any
-					sendFailureNotification(kc, cid, new InternalError(t.getMessage()));
-				}
+		Thread.startVirtualThread(() -> {
+			try {
+				myPlatform.killContainer(cid, requesterPrincipal, requesterCredentials);
+			} catch (JADESecurityException ae) {
+				logger.log(Logger.SEVERE, "Agent " + requester.getName() + " does not have permission to perform action Kill-container: " + ae);
+				// Send failure notification to the requester if any
+				sendFailureNotification(kc, cid, new Unauthorised());
+			} catch (NotFoundException nfe) {
+				// Send failure notification to the requester if any
+				sendFailureNotification(kc, cid, new InternalError("Container not found. " + nfe.getMessage()));
+			} catch (UnreachableException ue) {
+				// Send failure notification to the requester if any
+				sendFailureNotification(kc, cid, new InternalError("Container unreachable. " + ue.getMessage()));
+			} catch (Throwable t) {
+				// Send failure notification to the requester if any
+				sendFailureNotification(kc, cid, new InternalError(t.getMessage()));
 			}
-		};
-
-		auxThread.start();
+		});
 	}
 
 	// SHUTDOWN PLATFORM
@@ -436,19 +426,14 @@ public class ams extends Agent /*implements AgentManager.Listener*/ {
 		notifyShutdownPlatformRequested();
 		
 		shuttingDown = true;
-		Thread auxThread = new Thread() {
-			public void run() {
-				try {
-					myPlatform.shutdownPlatform(requesterPrincipal, requesterCredentials);
-				} 
-				catch (JADESecurityException ae) {
-					logger.log(Logger.SEVERE, "Agent " + requester.getName() + " does not have permission to perform action Shutdown-Platform: " + ae);
-					shuttingDown = false;
-				}
+		Thread.ofVirtual().name("Platform-shutdown").start(() -> {
+			try {
+				myPlatform.shutdownPlatform(requesterPrincipal, requesterCredentials);
+			} catch (JADESecurityException ae) {
+				logger.log(Logger.SEVERE, "Agent " + requester.getName() + " does not have permission to perform action Shutdown-Platform: " + ae);
+				shuttingDown = false;
 			}
-		};
-		auxThread.setName("Platform-shutdown");
-		auxThread.start();
+		});
 	}
 	
 	private void notifyShutdownPlatformRequested() {
